--- a/텍스트 정제.ipynb
+++ b/텍스트 정제.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a5daa2a1",
+   "id": "1904cc32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "35b7e5a4",
+   "execution_count": 2,
+   "id": "b3508507",
    "metadata": {},
    "outputs": [
     {
@@ -109,6 +109,16 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>겨울방학 아이와 가볼만한곳, 성동4차산업혁명체험센터...</td>\n",
+       "      <td>https://blog.naver.com/yoonina8?Redirect=Log&amp;l...</td>\n",
+       "      <td>그중에는 성동4차산업혁명체험센터의 문자도 있어 홈페이지 들어가 보는데, 그곳에서 하...</td>\n",
+       "      <td>내겐 좋은 친구가 있었네!</td>\n",
+       "      <td>https://blog.naver.com/yoonina8</td>\n",
+       "      <td>20220121</td>\n",
+       "      <td>\\n\\n\\n\\n\\n\\n\\n서울\\n\\n\\n\\n\\n겨울방학 아이와 가볼만한곳, 성동4차...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
        "      <td>4차산업혁명선도하고 지역SW산업발전을 목표하는...</td>\n",
        "      <td>https://blog.naver.com/oksk2002kr?Redirect=Log...</td>\n",
        "      <td>외 타지역으로 시선을 돌릴 수 있는 새로운 기회의 장이 마련될 수 있으니 기대가 됩...</td>\n",
@@ -118,7 +128,7 @@
        "      <td>\\n\\n\\n\\n\\n\\n\\nIT 정보\\n\\n\\n\\n\\n4차산업혁명선도하고 지역SW산업...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>8</th>\n",
        "      <td>4차 산업혁명이 미래를 바꾼다!</td>\n",
        "      <td>https://blog.naver.com/kimroh6688?Redirect=Log...</td>\n",
        "      <td>사진 출처 : 시사저널e 4차 산업혁명이란 증기기관이 나타난 1차 산업혁명, 전기를...</td>\n",
@@ -128,7 +138,7 @@
        "      <td>\\n\\n\\n\\n\\n\\n\\n어린이기사\\n\\n\\n\\n\\n4차 산업혁명이 미래를 바꾼다!...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>9</th>\n",
        "      <td>4차 산업혁명 기술 무엇이 있을까?</td>\n",
        "      <td>https://blog.naver.com/possiblehoya?Redirect=L...</td>\n",
        "      <td>4차 이전의 산업혁명에서 기계가 사람을 대체할것이라는 예측이 있었지만, 우리가 지금...</td>\n",
@@ -136,16 +146,6 @@
        "      <td>https://blog.naver.com/possiblehoya</td>\n",
        "      <td>20210407</td>\n",
        "      <td>\\n\\n\\n\\n\\n\\n\\n견우's 금융 경제 재테크\\n\\n\\n\\n\\n4차 산업혁명 ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>4차산업혁명 자율주행 관련주(현대오토에버 외)</td>\n",
-       "      <td>https://blog.naver.com/dyllis11?Redirect=Log&amp;l...</td>\n",
-       "      <td>이번 개최된 2022 CES의 중심은 단연 4차 산업 혁명을 주도할 자율주행, 전장...</td>\n",
-       "      <td>생강크루즈의 짧은8월</td>\n",
-       "      <td>https://blog.naver.com/dyllis11</td>\n",
-       "      <td>20220110</td>\n",
-       "      <td>\\n\\n\\n\\n\\n\\n\\n국내주식\\n\\n\\n\\n\\n4차산업혁명 자율주행 관련주(현대...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -159,10 +159,10 @@
        "3        영재교육 4차산업혁명에 생겨나는 미래 유망 직업   \n",
        "4             4차산업혁명 시대에 창의력은 무엇일까?   \n",
        "5           미래교육_ 4차 산업혁명 _ K-MOOC편   \n",
-       "6     4차산업혁명선도하고 지역SW산업발전을 목표하는...    \n",
-       "7                 4차 산업혁명이 미래를 바꾼다!   \n",
-       "8               4차 산업혁명 기술 무엇이 있을까?   \n",
-       "9         4차산업혁명 자율주행 관련주(현대오토에버 외)   \n",
+       "6  겨울방학 아이와 가볼만한곳, 성동4차산업혁명체험센터...    \n",
+       "7     4차산업혁명선도하고 지역SW산업발전을 목표하는...    \n",
+       "8                 4차 산업혁명이 미래를 바꾼다!   \n",
+       "9               4차 산업혁명 기술 무엇이 있을까?   \n",
        "\n",
        "                                                Link  \\\n",
        "0  https://blog.naver.com/ymkim1959?Redirect=Log&...   \n",
@@ -171,10 +171,10 @@
        "3  https://blog.naver.com/cmath_club?Redirect=Log...   \n",
        "4  https://blog.naver.com/simon9627?Redirect=Log&...   \n",
        "5  https://blog.naver.com/dkcyber4?Redirect=Log&l...   \n",
-       "6  https://blog.naver.com/oksk2002kr?Redirect=Log...   \n",
-       "7  https://blog.naver.com/kimroh6688?Redirect=Log...   \n",
-       "8  https://blog.naver.com/possiblehoya?Redirect=L...   \n",
-       "9  https://blog.naver.com/dyllis11?Redirect=Log&l...   \n",
+       "6  https://blog.naver.com/yoonina8?Redirect=Log&l...   \n",
+       "7  https://blog.naver.com/oksk2002kr?Redirect=Log...   \n",
+       "8  https://blog.naver.com/kimroh6688?Redirect=Log...   \n",
+       "9  https://blog.naver.com/possiblehoya?Redirect=L...   \n",
        "\n",
        "                                         Description         Blogger Name  \\\n",
        "0  4차산업혁명의 정의는 무엇인가요? 이를 구현하기 위한 기술은 무엇이 필요한가요? 기...       4차산업혁명 시대의 의공학   \n",
@@ -183,10 +183,10 @@
        "3  클라우드와 에지 컴퓨팅 등의 기술을 통하여 정보 시스템,통신 시스템,산업용 관리 시...        사고력수학 전문가 시매쓰   \n",
        "4  그러나 시대가 완전히 바뀐 4차산업혁명 시대에는 앞서 말했던 미술, 음악, 무용 등...               스마트메이커   \n",
        "5  학생들의 4차 산업혁명 관련 기술 및 신 산업 이해에 따른 취업 및 창업에 있어서 ...      오현주PD 온클에듀×진로TV   \n",
-       "6  외 타지역으로 시선을 돌릴 수 있는 새로운 기회의 장이 마련될 수 있으니 기대가 됩...            티보의 IT공작소   \n",
-       "7  사진 출처 : 시사저널e 4차 산업혁명이란 증기기관이 나타난 1차 산업혁명, 전기를...  곰곰이, 어린이/청소년 독서문화공간   \n",
-       "8  4차 이전의 산업혁명에서 기계가 사람을 대체할것이라는 예측이 있었지만, 우리가 지금...       견우's 재테크 & 스터디   \n",
-       "9  이번 개최된 2022 CES의 중심은 단연 4차 산업 혁명을 주도할 자율주행, 전장...          생강크루즈의 짧은8월   \n",
+       "6  그중에는 성동4차산업혁명체험센터의 문자도 있어 홈페이지 들어가 보는데, 그곳에서 하...       내겐 좋은 친구가 있었네!   \n",
+       "7  외 타지역으로 시선을 돌릴 수 있는 새로운 기회의 장이 마련될 수 있으니 기대가 됩...            티보의 IT공작소   \n",
+       "8  사진 출처 : 시사저널e 4차 산업혁명이란 증기기관이 나타난 1차 산업혁명, 전기를...  곰곰이, 어린이/청소년 독서문화공간   \n",
+       "9  4차 이전의 산업혁명에서 기계가 사람을 대체할것이라는 예측이 있었지만, 우리가 지금...       견우's 재테크 & 스터디   \n",
        "\n",
        "                          Blogger Link  Post Date  \\\n",
        "0     https://blog.naver.com/ymkim1959   20211221   \n",
@@ -195,10 +195,10 @@
        "3    https://blog.naver.com/cmath_club   20220117   \n",
        "4     https://blog.naver.com/simon9627   20211211   \n",
        "5      https://blog.naver.com/dkcyber4   20220114   \n",
-       "6    https://blog.naver.com/oksk2002kr   20211219   \n",
-       "7    https://blog.naver.com/kimroh6688   20211013   \n",
-       "8  https://blog.naver.com/possiblehoya   20210407   \n",
-       "9      https://blog.naver.com/dyllis11   20220110   \n",
+       "6      https://blog.naver.com/yoonina8   20220121   \n",
+       "7    https://blog.naver.com/oksk2002kr   20211219   \n",
+       "8    https://blog.naver.com/kimroh6688   20211013   \n",
+       "9  https://blog.naver.com/possiblehoya   20210407   \n",
        "\n",
        "                                       Post Contents  \n",
        "0  \\n\\n\\n\\n\\n\\n\\n4차산업혁명\\n\\n\\n\\n\\n4차산업혁명(4IR)과 의료기...  \n",
@@ -207,42 +207,33 @@
        "3  \\n\\n\\n\\n\\n\\n\\n\\n\\n\\n영재교육\\n\\n\\n\\n\\n영재교육 4차산업혁명에...  \n",
        "4  \\n\\n\\n\\n\\n\\n\\n이슈 뉴스\\n\\n\\n\\n\\n4차산업혁명 시대에 창의력은 무...  \n",
        "5  \\n\\n\\n\\n\\n\\n\\n미래교육자료\\n\\n\\n\\n\\n 미래교육_ 4차 산업혁명 _...  \n",
-       "6  \\n\\n\\n\\n\\n\\n\\nIT 정보\\n\\n\\n\\n\\n4차산업혁명선도하고 지역SW산업...  \n",
-       "7  \\n\\n\\n\\n\\n\\n\\n어린이기사\\n\\n\\n\\n\\n4차 산업혁명이 미래를 바꾼다!...  \n",
-       "8  \\n\\n\\n\\n\\n\\n\\n견우's 금융 경제 재테크\\n\\n\\n\\n\\n4차 산업혁명 ...  \n",
-       "9  \\n\\n\\n\\n\\n\\n\\n국내주식\\n\\n\\n\\n\\n4차산업혁명 자율주행 관련주(현대...  "
+       "6  \\n\\n\\n\\n\\n\\n\\n서울\\n\\n\\n\\n\\n겨울방학 아이와 가볼만한곳, 성동4차...  \n",
+       "7  \\n\\n\\n\\n\\n\\n\\nIT 정보\\n\\n\\n\\n\\n4차산업혁명선도하고 지역SW산업...  \n",
+       "8  \\n\\n\\n\\n\\n\\n\\n어린이기사\\n\\n\\n\\n\\n4차 산업혁명이 미래를 바꾼다!...  \n",
+       "9  \\n\\n\\n\\n\\n\\n\\n견우's 금융 경제 재테크\\n\\n\\n\\n\\n4차 산업혁명 ...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"data/forth_revolution.csv\", encoding=\"cp949\")\n",
+    "df = pd.read_csv(\"data/forth_revolution.csv\", encoding=\"utf-8\")\n",
     "df[0:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "dc840f7a",
+   "execution_count": 3,
+   "id": "0b3d21cf",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting eunjeon\n",
-      "  Downloading eunjeon-0.4.0.tar.gz (34.7 MB)\n",
-      "Building wheels for collected packages: eunjeon\n",
-      "  Building wheel for eunjeon (setup.py): started\n",
-      "  Building wheel for eunjeon (setup.py): finished with status 'done'\n",
-      "  Created wheel for eunjeon: filename=eunjeon-0.4.0-cp39-cp39-win_amd64.whl size=35022827 sha256=f4546c2f3e6eb35c24d71f212728adcb3bd95839a174e7ed9ea9f8a436409193\n",
-      "  Stored in directory: c:\\users\\chosungsu\\appdata\\local\\pip\\cache\\wheels\\51\\05\\fb\\48ff3bf6804f7cea4a3f7be6300a5b19618007c35d2064a753\n",
-      "Successfully built eunjeon\n",
-      "Installing collected packages: eunjeon\n",
-      "Successfully installed eunjeon-0.4.0\n"
+      "Requirement already satisfied: eunjeon in c:\\users\\chosungsu\\anaconda3\\lib\\site-packages (0.4.0)\n"
      ]
     }
    ],
@@ -252,8 +243,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "9575e84d",
+   "execution_count": 4,
+   "id": "40c89d63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,8 +254,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "8436e8c3",
+   "execution_count": 5,
+   "id": "4613341a",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +264,7 @@
        "['4', '은', '이', '것', '등', '더', '를', '차', '수', '년']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,8 +278,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "4bb71717",
+   "execution_count": 6,
+   "id": "3ba9ae4a",
    "metadata": {},
    "outputs": [
     {
@@ -300,14 +291,14 @@
        "3    영재교육 4차산업혁명에 생겨나는 미래 유망 직업 클라우드와 에지 컴퓨팅 등의 기술을...\n",
        "4    4차산업혁명 시대에 창의력은 무엇일까? 그러나 시대가 완전히 바뀐 4차산업혁명 시대...\n",
        "5    미래교육_ 4차 산업혁명 _ K-MOOC편 학생들의 4차 산업혁명 관련 기술 및 신...\n",
-       "6    4차산업혁명선도하고 지역SW산업발전을 목표하는...  외 타지역으로 시선을 돌릴 수...\n",
-       "7    4차 산업혁명이 미래를 바꾼다! 사진 출처 : 시사저널e 4차 산업혁명이란 증기기관...\n",
-       "8    4차 산업혁명 기술 무엇이 있을까? 4차 이전의 산업혁명에서 기계가 사람을 대체할것...\n",
-       "9    4차산업혁명 자율주행 관련주(현대오토에버 외) 이번 개최된 2022 CES의 중심은...\n",
+       "6    겨울방학 아이와 가볼만한곳, 성동4차산업혁명체험센터...  그중에는 성동4차산업혁명...\n",
+       "7    4차산업혁명선도하고 지역SW산업발전을 목표하는...  외 타지역으로 시선을 돌릴 수...\n",
+       "8    4차 산업혁명이 미래를 바꾼다! 사진 출처 : 시사저널e 4차 산업혁명이란 증기기관...\n",
+       "9    4차 산업혁명 기술 무엇이 있을까? 4차 이전의 산업혁명에서 기계가 사람을 대체할것...\n",
        "dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,8 +310,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "836870ec",
+   "execution_count": 7,
+   "id": "9ef16aa8",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +320,7 @@
        "['산업', '혁명', '의료', '기술', '과목', '산업', '혁명', '정의', '무엇', '구현']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,8 +337,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "44ef5e5c",
+   "execution_count": 8,
+   "id": "9a9e0651",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +356,7 @@
        " ('의료', 'NNG')]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,8 +371,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "6e7f90ae",
+   "execution_count": 9,
+   "id": "3afc817a",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +381,7 @@
        "['이루어지다', '변하다', '이루어지다', '불리다', '생겨나다', '통하다', '및다', '있다', '되다', '있다']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,17 +397,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "8ae40cd7",
+   "execution_count": 10,
+   "id": "1a83dd91",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['같다', '빠르다', '있다', '있다', '있다', '있다', '좋다', '넓다', '높다', '나쁘다']"
+       "['같다', '있다', '빠르다', '있다', '있다', '있다', '있다', '좋다', '넓다', '높다']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,36 +423,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "84a64958",
+   "execution_count": 11,
+   "id": "33e8ead9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('산업', 3499),\n",
-       " ('혁명', 3060),\n",
+       "[('산업', 3493),\n",
+       " ('혁명', 3056),\n",
        " ('시대', 796),\n",
-       " ('기술', 534),\n",
-       " ('미래', 299),\n",
-       " ('교육', 290),\n",
-       " ('변화', 217),\n",
-       " ('정보', 192),\n",
-       " ('인공지능', 190),\n",
-       " ('핵심', 170),\n",
-       " ('데이터', 167),\n",
-       " ('직업', 159),\n",
+       " ('기술', 531),\n",
+       " ('미래', 298),\n",
+       " ('교육', 292),\n",
+       " ('변화', 216),\n",
+       " ('정보', 193),\n",
+       " ('인공지능', 191),\n",
+       " ('데이터', 171),\n",
+       " ('핵심', 169),\n",
+       " ('직업', 160),\n",
        " ('우리', 157),\n",
-       " ('분야', 150),\n",
-       " ('융합', 143),\n",
+       " ('분야', 149),\n",
+       " ('융합', 142),\n",
        " ('스마트', 138),\n",
-       " ('디지털', 121),\n",
+       " ('디지털', 122),\n",
        " ('사회', 119),\n",
-       " ('인터넷', 116),\n",
+       " ('인터넷', 115),\n",
        " ('빅', 113)]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
